# medium-bazel-nodejs-multi-file

./: .gitignore  README.md  package-lock.json  package.json
src/app1/: BUILD.bazel  index.js
src/app1/subfolder/: second.js
